# mixer-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: cli.rs  concurrency.rs  config.rs  credentials.rs  logging.rs  main.rs  openai.rs  paths.rs  reasoning.rs  router.rs  server.rs  usage.rs
src/auth/: device_flow.rs  mod.rs
src/commands/: auth_cmd.rs  completions.rs  config_cmd.rs  doctor.rs  init.rs  login.rs  logout.rs  mod.rs  models.rs  providers.rs  serve.rs
src/providers/: codex.rs  glm.rs  kimi_api.rs  kimi_code.rs  minimax.rs  mod.rs  ollama.rs  opencode.rs
src/providers/common/: api_key_login.rs  mod.rs  models_list.rs  oauth_refresh.rs  openai_client.rs  responses_api.rs
