[package]
name = "mixer-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Mix LLM inference across subscription-based providers behind a single OpenAI-compatible endpoint"
license = "MIT"

[[bin]]
name = "mixer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
clap = { version = "4", features = ["derive", "wrap_help"] }
clap_complete = "4"
dirs = "6"
eventsource-stream = "0.2"
futures = "0.3"
jsonwebtoken = "9"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util", "time", "sync"] }

[dev-dependencies]
